<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/oneclick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <EditText
            android:id="@+id/edtfname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/sign_up_firstname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/edtlname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/sign_up_lastname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/edtfname"
            app:layout_constraintStart_toStartOf="@+id/edtfname"
            app:layout_constraintTop_toBottomOf="@+id/edtfname" />

        <EditText
            android:id="@+id/edtphno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/sign_up_phoneno"
            android:inputType="phone"


            app:layout_constraintEnd_toEndOf="@+id/edtlname"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtlname"
            app:layout_constraintTop_toBottomOf="@+id/edtlname" />

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/sign_up_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/edtphno"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtphno"
            app:layout_constraintTop_toBottomOf="@+id/edtphno" />

        <EditText
            android:id="@+id/edtnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/sign_up_nic"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/edtemail"
            app:layout_constraintTop_toBottomOf="@+id/edtemail" />

        <EditText
            android:id="@+id/edtpw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/sign_up_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtnic"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtnic"
            app:layout_constraintTop_toBottomOf="@+id/edtnic" />

        <EditText
            android:id="@+id/edtpw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/sign_up_passwordagain"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtpw1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtpw1"
            app:layout_constraintTop_toBottomOf="@+id/edtpw1" />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtpw2" />

        <TextView
            android:id="@+id/loginid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reg_to_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnsignup" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>