<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddItem">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_begin="265dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_begin="349dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.5"

        />

    <TextView
        android:id="@+id/caption"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:text="ADD ITEM"
        app:layout_constraintBottom_toTopOf="@+id/guid2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guid1"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/itname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_itname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guid4"
        app:layout_constraintTop_toTopOf="@+id/guid3"
        tools:layout_editor_absoluteX="101dp" />

    <EditText
        android:id="@+id/itprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_itprice"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/guid5"
        app:layout_constraintEnd_toEndOf="@+id/itname"
        app:layout_constraintStart_toStartOf="@+id/itname"
        app:layout_constraintTop_toTopOf="@+id/guid4"
        app:layout_constraintVertical_bias="0.375" />

    <EditText
        android:id="@+id/itmodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_itmodel"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guid6"
        app:layout_constraintEnd_toEndOf="@+id/itprice"
        app:layout_constraintStart_toStartOf="@+id/itprice"
        app:layout_constraintTop_toTopOf="@+id/guid5" />

    <EditText
        android:id="@+id/itdes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_itmdes"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guid7"
        app:layout_constraintEnd_toEndOf="@+id/itmodel"
        app:layout_constraintStart_toStartOf="@+id/itmodel"
        app:layout_constraintTop_toTopOf="@+id/guid6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_itmbtn"
        app:layout_constraintBottom_toTopOf="@+id/guid8"
        app:layout_constraintEnd_toEndOf="@+id/itdes"
        app:layout_constraintStart_toStartOf="@+id/itdes"
        app:layout_constraintTop_toTopOf="@+id/guid7" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toTopOf="@+id/guid3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guid2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.596" />
</androidx.constraintlayout.widget.ConstraintLayout>